unpackaged/main/default/objects/Opportunity/fields/EDRA_C__c.field-meta.xml
<CustomField>
    <fullName>EDRA_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDRA</label>
    <type>Checkbox</type>
</CustomField>