unpackaged/main/default/objects/Opportunity/fields/Loss_Reason_C__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_C__c</fullName>
    <label>Loss Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss</fullName>
                <label>Price</label>
            </value>
            <value>
                <fullName>Lack of Quality</fullName>
            </value>
            <value>
                <fullName>Lack of Saleability</fullName>
            </value>
            <value>
                <fullName>Echo Withdrew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>