unpackaged/main/default/objects/Opportunity/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Reference assigned to the Opportunity</description>
    <displayFormat>EMS {00000000}</displayFormat>
    <label>Reference</label>
    <type>AutoNumber</type>
</CustomField>