unpackaged/main/default/objects/Opportunity/fields/Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Reason__c</fullName>
    <description>Definable reasons why Echo Won the opportunity</description>
    <label>Win Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Win</fullName>
                <label>Price</label>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Values</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>