unpackaged/main/default/objects/Opportunity/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Opportunity_product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All opportunities - UK</label>
</ListView>