unpackaged/main/default/objects/Opportunity/listViews/All_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity_product__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>