unpackaged/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity_product__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Opportunity Pipeline</label>
</ListView>